# RisWidget

./: .gitignore  10_tints.json  CMakeLists.txt  LICENSE  Makefile  README.md  RisWidget.vpj  _out_out_date__setup.py  _qt_debug.py  agg_widget.py  benchmark.ipy  canvas.py  canvas_widget.py  dead_simple_build.bash  dead_simple_build.bat  dead_simple_build_debug.bash  flipbook.py  gl_resources.py  histogram.glslc  histogram.glslf  histogram.glslv  histogramCalc.glslc  histogramConsolidate.glslc  histogram_canvas.py  histogram_scene.py  histogram_view.py  histogram_widget.py  image.glslf  image.py  image_canvas.py  image_scene.py  image_view.py  image_widget.py  image_widget_fragment_shader_gray.glsl  image_widget_fragment_shader_rgb.glsl  image_widget_vertex_shader.glsl  launch_riswidget_for_debugging.py  loop_cache_sink_stream.py  micro_manager_snapstream.py  ndimage_statistics.py  (+19 more)
bughunt/: bughunt.cpp  bughunt.h  bughunt.pro  bughunt.sip  build_mac.bash
cmake_modules/: FindFreeImage.cmake  FindFreeImagePlus.cmake  FindGLM.cmake  FindOpenCL.cmake  FindOpenImageIO.cmake  FindPyQt5.cmake  FindSIP.cmake  SIPMacros.cmake
cpp/: Common.h  GilScopedRelease.cpp  GilScopedRelease.h  GilStateScopeOperators.cpp  GilStateScopeOperators.h  GlProgram.cpp  GlProgram.h  GlslProg.cpp  GlslProg.h  GlxFunctions.c  GlxFunctions.h  HistoDrawProg.cpp  HistoDrawProg.h  HistogramView.cpp  HistogramView.h  HistogramWidget.cpp  HistogramWidget.h  HistogramWidget.ui  ImageDrawProg.cpp  ImageDrawProg.h  ImageView.cpp  ImageView.h  ImageWidget.cpp  ImageWidget.h  ImageWidget.ui  ImageWidgetViewScroller.cpp  ImageWidgetViewScroller.h  LockedRef.h  Renderer.cpp  Renderer.h  RisWidget.cpp  RisWidget.h  RisWidget.pro  RisWidget.qrc  RisWidget.sln  RisWidget.ui  RisWidget.vcxproj  RisWidgetException.cpp  RisWidget_standalone.pro  SharedGlObjects.cpp  (+8 more)
cpp/gpu/: histogram.cl  histogram.glslf  histogram.glslv  histogramCalc.cl  histogramConsolidate.cl  image.glslf  image.glslv
cpp/shaders/: histogramCalc.glslc  histogramConsolidate.glslc  image.glslf  image.glslv  panel.glslf  panel.glslv
cython/: _ndimage_statistics.cpp  _ndimage_statistics.pyx  _ndimage_statistics_impl.cpp  _ndimage_statistics_impl.h
devtest/: gs.py
devtest/cpp/: GS.cpp  GS.h  GV.cpp  GV.h  ImageWidget.cpp  ImageWidget.h  cpp.pro  main.cpp
devtest/minimal/: minimal.py
gpu/: histogram.glslf  histogram.glslv  histogramCalc.glslc  histogramConsolidate.glslc  panel.glslf  panel.glslv
original/: ris_exceptions.py
original/ris_widget/: RisWidget.vpj  micro_manager_focus_sink.py  ris_exceptions.py  shader_program.py
ris_widget/: CMakeLists.txt  _ndimage_statistics.pyx  _qt_debug.py  async_texture.py  basic_image.py  contextual_info.py  display_image.py  flipbook.py  histogram_scene.py  histogram_view.py  image.py  image_scene.py  image_stack.py  image_stack_list_widget.py  image_stack_table_widget.py  image_view.py  immutable_image.py  immutable_image_with_mutable_properties.py  layer.py  layer_stack.py  layers.py  main_scene.py  main_view.py  point_list_picker.py  property.py  ris_widget.py  ris_widget_test.py  shader_scene.py  shader_view.py  shared_resources.py  signaling_list.py  signaling_list_property_table_model.py  test.py
ris_widget/examples/: flipbook_page_poly_line_annotator.py  main_thread_mandelbrot.py  main_thread_mandelbrot.qml  poly_fill_point_picker.py  poly_line_point_picker.py  quadratic_compound_bezier_picker.py  simple_painter.py  simple_point_picker.py  simple_poly_line_picker.py  simple_poly_line_point_picker.py  very_simple_poly_line_picker.py
ris_widget/image_impl/: CMakeLists.txt  Gil.cpp  Gil.h  TESTS.py  _CppImage.cpp  _CppImage.h  _cpp_image.cpp  _cpp_image.h  _cpp_image.sip  _cpp_image_module.cpp  cpp_image.py  py_image.py
ris_widget/ndimage_statistics/: CMakeLists.txt  Luts.cpp  Luts.h  NDImageStatistics.cpp  NDImageStatistics.h  NDImageStatistics_decl.h  NDImageStatistics_impl.h  PyArrayView.cpp  __init__.py  _common.py  _measures_fast.py  _measures_slow.py  _ndimage_statistics.cpp  _ndimage_statistics.h  _ndimage_statistics.pyx  _ndimage_statistics_impl.cpp  _ndimage_statistics_impl.h  _ndimage_statistics_module.cpp  _test_and_benchmark.py  cpp_ndimage_statistics_python_module.cpp  ndimage_statistics.cpp  ndimage_statistics.py  py_ndimage_statistics.py  resampling_lut.cpp  resampling_lut.h  test.py  test_and_benchmark.py
ris_widget/ndimage_statistics/NDImageStatistics/: NDImageStatistics.h  NDImageStatistics_impl.h  bitmap_mask_cursor_aspects.h  common.cpp  common.h  cursors.h  cursors_impl.h  masks.h  masks_impl.h  statses.cpp  statses.h  statses_impl.h
ris_widget/ndimage_statistics/misc/: Luts.cpp  Luts.h  PyArrayView.cpp  PyArrayView.h  branch_hints.h
shaders/: histogram_widget_fragment_shader_g.glsl  histogram_widget_fragment_shader_rgb.glsl  histogram_widget_vertex_shader.glsl  image_widget_fragment_shader_g.glsl  image_widget_fragment_shader_ga.glsl  image_widget_fragment_shader_rgb.glsl  image_widget_fragment_shader_rgba.glsl  image_widget_fragment_shader_template.glsl  image_widget_vertex_shader.glsl
skunkworks/: Skunkworks.cpp  Skunkworks.h  configure.py  skunkworks.pro  skunkworks.sip  skunkworksconfig.py.in
source/cpp/: CMakeLists.txt  Common.cpp  Common.h  GilStateScopeOperators.cpp  GilStateScopeOperators.h  GlslProg.cpp  GlslProg.h  HistoDrawProg.h  HistogramView.cpp  HistogramView.h  HistogramWidget.cpp  HistogramWidget.h  HistogramWidget.ui  Image.cpp  Image.h  ImageDrawProg.cpp  ImageDrawProg.h  ImageView.h  ImageWidget.cpp  ImageWidget.h  ImageWidget.ui  Renderer.h  RisWidget.cpp  RisWidget.h  RisWidget.pro  RisWidget.qrc  RisWidget.sln  RisWidget.ui  RisWidget.vcxproj  RisWidgetException.cpp  RisWidgetException.h  RisWidget_debug.pro  ShowCheckerDialog.cpp  ShowCheckerDialog.h  ShowCheckerDialog.ui  ViewWidget.cpp  ViewWidget.h  YosemiteDragAndDropFormatFix.mm  cl.hpp  ris_widget.sip
source/cpp/Flipper/: DiskFlipper.cpp  DiskFlipper.h  Flipper.cpp  Flipper.h  Flipper.ui  RamFlipper.cpp  RamFlipper.h  RenameFlipper.cpp  RenameFlipper.h  RenameFlipper.ui
(+86 files in other folders)
